fix z-index issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -961,6 +961,7 @@ a.my-gallery__img--main {
   left: 0;
   right: 0;
   padding: 1em 0;
+  z-index: 500;
 }
 #sub header {
   margin-bottom: 1em !important;
